# Parcial2SemaforosC-

./: CMakeLists.txt  README.md
include/: Constants.h  Cruce.h  GestorSemaforos.h  Semaforo.h  Vehiculo.h
src/: Cruce.cpp  GestorSemaforos.cpp  Semaforo.cpp  Vehiculo.cpp  main.cpp
